[package]
name = "ab-av1"
version = "0.7.7"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
description = "AV1 encoding with fast VMAF sampling"
repository = "https://github.com/alexheretic/ab-av1"
keywords = ["av1", "vmaf"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.53"
atty = "0.2.14"
blake3 = "1.3.3"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
console = "0.15.4"
dirs = "5"
ffprobe = "0.3"
futures = "0.3.19"
humantime = "2.1"
indicatif = "0.17"
infer = { version = "0.13", default-features = false }
once_cell = "1.9"
rand = "0.8.5"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
shell-escape = "0.1.5"
sled = "0.34.7"
time = { version = "0.3", features = ["parsing", "macros"] }
tokio = { version = "1.15", features = ["rt", "macros", "process", "fs", "signal"] }
tokio-process-stream = "0.4"
tokio-stream = "0.1"

[target.'cfg(unix)'.dependencies]
unix-named-pipe = "0.2"

[target.'cfg(windows)'.dependencies.tokio]
version = "1.15"
features = ["net"]

[profile.release]
lto = true
opt-level = "s"
strip = true
