[package]
name = "ab-av1"
version = "0.7.19"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
description = "AV1 encoding with fast VMAF sampling"
repository = "https://github.com/alexheretic/ab-av1"
keywords = ["av1", "vmaf"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.53"
async-stream = "0.3.5"
blake3 = "1.3.3"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.4.10"
console = "0.15.4"
dirs = "5"
env_logger = { version = "0.11.3", default-features = false, features = [
    "auto-color",
    "humantime",
] }
fastrand = "2"
ffprobe = "0.4"
futures-util = "0.3.19"
humantime = "2.1"
indicatif = "0.17"
infer = { version = "0.16", default-features = false }
log = "0.4.21"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
shell-escape = "0.1.5"
sled = "0.34.7"
time = { version = "0.3", features = ["parsing", "macros"] }
tokio = { version = "1.15", features = [
    "rt",
    "macros",
    "process",
    "fs",
    "signal",
] }
tokio-process-stream = "0.4"
tokio-stream = "0.1"

[profile.release]
lto = true
opt-level = "s"
strip = true

[lints.rust]
unused_crate_dependencies = "deny"
